# roxide

./: .gitignore  .roxide-ci.yml  .roxmake.toml  .roxmake.yml  Cargo.toml  Cross.toml  Dockerfile  Makefile  PKGBUILD  README.md  TODOLIST.md  build.rs  example_option_option.rs  go.mod  go.sum  install.sh  main.go  rustfmt.toml  typos.toml
.github/workflows/: cargo-check.yml  cargo-test.yml  check.yml  release-binary.yml  release-docker.yml  release.yml  spell-check.yml  test.yml
.roxide/workflows/: all.toml  build-image.toml  build.toml  clean.toml  get-image-name.toml  install.toml  publish-image.toml
cmd/: attach.go  cmd.go  complete.go  config.go  demo.go.txt  detach.go  display.go  home.go  init.go  merge.go  rebase.go  squash.go  sync.go
cmd/create/: branch.go  create.go  tag.go
cmd/get/: action.go  branch.go  get.go  owner.go  repo.go  tag.go
cmd/logs/: job.go  logs.go
cmd/open/: action.go  branch.go  job.go  merge.go  open.go  repo.go  tag.go
cmd/remove/: branch.go  remove.go  repo.go  tag.go
cmd/switchcmd/: branch.go  switch.go  tag.go
config/: .tmux.conf  config.toml  config.yml  docker-config.toml  docker-config.yml  github.yml  starship.toml  test.yml
config/remotes/: github.toml  test.toml
config/workflows/: go-module.toml
examples/: api_get.rs  api_list.rs  repo_home.rs  repo_list.rs  show_config.rs
files/: merge_request.md
hack/: bash_complete.sh  hack.go  rox.sh  run_full_tests.sh  wrap.sh  zsh_complete.sh
pkg/batch/: batch.go  batch_test.go
pkg/choice/: choice.go  many.go  one.go
pkg/config/: config.go  remote.go  test_remote_github.toml  test_remote_local.toml
pkg/context/: context.go  remote.go
pkg/db/: db.go  db_test.go  ptr.go  remote_cache_list.go  remote_cache_list_test.go  remote_cache_repo.go  remote_cache_repo_test.go  repo.go  repo_test.go  sql.go  sql_test.go
pkg/errors/: errors.go
pkg/git/: branch.go  branch_test.go  commit.go  git.go  remote.go  tag.go  tag_test.go
pkg/lang/: lang.go
pkg/remoteapi/: cache.go  github.go  gitlab.go  remoteapi.go
pkg/repoutils/: action.go  create.go  current.go  delete.go  remote.go  sync.go  tag.go
pkg/term/: confirm.go  input.go  open.go  print.go  select.go  term.go
pkg/timeutils/: timeutils.go
scripts/: complete_bash.sh  complete_zsh.zsh  docker-zshrc.zsh  init.sh
src/: batch.rs  build_info.rs  check.rs  debug.rs  errors.rs  exec.rs  filelock.rs  format.rs  git.rs  ignore.rs  lib.rs  main.rs  progress.rs  scan.rs  secret.rs  self_update.rs  shell.rs  table.rs  term.rs  utils.rs  vscode_projects.rs  workflow.rs
src/api/: alias.rs  cache.rs  github.rs  github_test.rs  gitlab.rs  gitlab_test.rs  mod.rs  rename.rs  types.rs
src/cmd/: action.rs  app.rs  attach.rs  branch.rs  build.rs  check.rs  clean.rs  complete.rs  config.rs  copy.rs  current.rs  decrypt.rs  detach.rs  detect.rs  diagnose.rs  disk_usage.rs  display.rs  encrypt.rs  export.rs  gc.rs  get.rs  home.rs  import.rs  info.rs  init.rs  label.rs  make.rs  merge.rs  mirror.rs  mod.rs  open.rs  rebase.rs  recover.rs  remove.rs  reset.rs  run.rs  run_hook.rs  scan.rs  secret.rs  snapshot.rs  (+8 more)
src/config/: context.rs  default.rs  (+6 more)
(+136 files in other folders)
