[package]
name = "roxide"
version = "0.19.0"
edition = "2024"
build = "build.rs"
license = "MIT"
authors = ["fioncat"]
categories = ["command-line-utilities"]
readme = "README.md"
repository = "https://github.com/fioncat/roxide"
description = "A simple and fast tool to manage your git repositories"

[dependencies]
anyhow = "^1"
async-trait = "^0"
chrono = "^0"
clap = { version = "^4", features = ["derive"] }
clap_complete = { version = "^4", features = ["unstable-dynamic"] }
console = "^0"
octocrab = "^0"
regex = "^1"
rusqlite = { version = "^0", features = ["bundled"] }
tokio = { version = "^1", features = ["full"] }

[build-dependencies]
simple-error = "^0"
vergen = { version = "^9", features = ["build", "rustc", "cargo", "si"] }

[profile.release]
lto = true
strip = true
incremental = false
