[package]
name = "roxide"
version = "0.19.0"
edition = "2024"
build = "build.rs"
license = "MIT"
authors = ["fioncat"]
categories = ["command-line-utilities"]
readme = "README.md"
repository = "https://github.com/fioncat/roxide"
description = "A simple and fast tool to manage your git repositories"

[dependencies]
anyhow = "^1"
async-trait = "^0"
chrono = "^0"
clap = { version = "^4", features = ["derive"] }
clap_complete = { version = "^4", features = ["unstable-dynamic"] }
console = "^0"
crossbeam = "^0"
dirs = "^6"
file-lock = "^2"
gitlab = "^0"
ignore = "^0"
num_cpus = "^1"
octocrab = "^0"
pad = "^0"
paste = "^1"
regex = "^1"
reqwest = "^0"
rusqlite = { version = "^0", features = ["bundled"] }
scanf = "^2"
semver = "^1"
serde = {version = "^1", features = ["derive"] }
serde_json = "^1"
shellexpand = "^3"
termion = "^4"
tokio = { version = "^1", features = ["full"] }
toml = "^0"

[build-dependencies]
simple-error = "^0"
vergen = { version = "^9", features = ["build", "rustc", "cargo", "si"] }

[profile.release]
lto = true
strip = true
incremental = false
